# RajbariIT-Remote-App

./: package.json
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discovery.rs  input.rs  lib.rs  main.rs  screen.rs  security.rs  transfer.rs
