[package]
name = "rajbariit-remote"
version = "1.0.0"
edition = "2021"
description = "RajbariIT Remote Lite - Cross-platform Remote Access"

[lib]
name = "rajbariit_remote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
log = "0.4"

# LAN Discovery
mdns-sd = "0.11"

# Screen Capture
scrap = "0.5"

# Input Simulation
enigo = "0.2"

# Image encoding
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Utilities
hostname = "0.4"
dirs-next = "2.0"
